# penguin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dateCreate.txt
libs/glad/: glad.h
src/: glad.c  main.cpp
src/enums/: penguinEnums.h
src/global/: global.cpp  global.h
src/global/glfw/: glfw.cpp  glfw.h
